# vllm-xcpu-plugin

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  test_plugin_registration.py
scripts/: check.sh  format.sh  install-hooks.sh  lint.sh  mypy.py
scripts/hooks/: pre-commit  pre-push
tests/: conftest.py
tests/kernels/: utils.py
tests/kernels/core/: test_activation.py  test_layernorm.py  test_pos_encoding.py
tests/plugin_tests/: test_platform_plugins.py
vllm_xcpu_plugin/: __init__.py  custom_ops.py  envs.py  platform.py
vllm_xcpu_plugin/distributed/: cpu_mpi_communicator.py  xcpu_communicator.py
vllm_xcpu_plugin/layers/fused_moe/: cpu_groupgemm_moe.py  cpu_groupgemm_moe_v1.py  mpi_alltoallv_prepare_finalize.py  torch_all_to_all_single_prepare_finalize.py  unquantized_fused_moe_method.py
vllm_xcpu_plugin/worker/: worker_v1.py
