[build-system]
requires = [
    "setuptools>=77.0.3,<81.0.0",
    "setuptools-scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-xcpu-plugin"
dynamic = ["version", "dependencies"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_xcpu_plugin*"]

[tool.ruff]
preview = true

[tool.ruff.lint.per-file-ignores]
# Add specific file ignores here if needed

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # zip without `strict=`
    "B905",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"
